--- a/Blueberry/app/build.gradle
+++ b/Blueberry/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+    implementation "gun0912.ted:tedpermission:2.1.0"
 }
