Add Firebase Gradle and Sync with correct version

--- a/Blueberry/app/src/main/AndroidManifest.xml
+++ b/Blueberry/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:name=".OptionActivity"
             android:exported="true"
             android:label="@string/title_activity_option" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
