--- a/Blueberry/app/build.gradle
+++ b/Blueberry/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "ssu.cheesecake.blueberry"
+        applicationId "com.cheesecake.blueberry"
         minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
@@ -26,9 +26,15 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.0.0'
     implementation 'androidx.navigation:navigation-ui:2.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    compile 'com.google.firebase:firebase-core:17.2.0'
+    compile 'com.google.firebase:firebase-auth:19.0.0'
+    compile 'com.google.android.gms:play-services-auth:17.0.0'
 
     implementation "gun0912.ted:tedpermission:2.1.0"
 }
+
+apply plugin: 'com.google.gms.google-services'
