--- a/Blueberry/app/src/main/AndroidManifest.xml
+++ b/Blueberry/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         </activity>
 
         <activity
-            android:name=".OptionActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/title_activity_option" />
 
