--- a/Blueberry/app/build.gradle
+++ b/Blueberry/app/build.gradle
@@ -36,12 +36,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
     implementation 'com.google.firebase:firebase-core:17.2.0'
     implementation 'com.google.firebase:firebase-auth:19.0.0'
+    implementation 'com.google.firebase:firebase-database:17.0.0'
+
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
     implementation "gun0912.ted:tedpermission:2.1.0"
 
-    //TODO: check need!
-    testImplementation 'junit:junit:4.12'
 }
 
 apply plugin: 'com.google.gms.google-services'
