--- a/Blueberry/app/src/main/AndroidManifest.xml
+++ b/Blueberry/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
         <activity android:name=".ReCheck2"
             android:screenOrientation="portrait"
             android:exported="true"/>
-
+        <meta-data android:name="firebase_analytics_collection_deactivated" android:value="false"
+            />
     </application>
 
     <uses-permission android:name="android.permission.CAMERA" />
