--- a/Blueberry/app/build.gradle
+++ b/Blueberry/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 
     implementation 'com.github.pqpo:SmartCropper:v2.1.3'
     implementation project(path: ':openCV')
+    implementation 'com.android.support:design:28.0.0'
 
 }
 
