--- a/Blueberry/app/build.gradle
+++ b/Blueberry/app/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     implementation project(path: ':openCV')
     implementation 'com.android.support:design:28.0.0'
 
+    implementation 'com.rmtheis:tess-two:9.1.0'
+    implementation 'net.steamcrafted:load-toast:1.0.12'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
