--- a/Blueberry/app/build.gradle
+++ b/Blueberry/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     implementation 'com.rmtheis:tess-two:9.1.0'
     implementation 'net.steamcrafted:load-toast:1.0.12'
 
+    implementation 'com.nikhilpanju.recyclerviewenhanced:recyclerviewenhanced:1.1.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
