--- a/Blueberry/app/src/main/AndroidManifest.xml
+++ b/Blueberry/app/src/main/AndroidManifest.xml
@@ -5,6 +5,11 @@
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -13,8 +18,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".LoginActivity"
+        <activity android:name=".camera.NameCropActivity"></activity>
+        <activity
+            android:name=".LoginActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,30 +32,21 @@
             android:name=".menu.MainActivity"
             android:exported="true"
             android:label="@string/title_activity_option"
-            android:screenOrientation="portrait"
-            />
-        <activity android:name=".camera.CameraActivity"
             android:screenOrientation="portrait" />
-
-        <activity android:name=".EditActivity"
-            android:screenOrientation="portrait"
-            android:exported="true"/>
-
-        <activity android:name=".camera.SmartCropActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".camera.CameraActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".EditActivity"
+            android:exported="true"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".camera.SmartCropActivity"
+            android:screenOrientation="portrait" />
 
         <meta-data
             android:name="firebase_analytics_collection_deactivated"
-            android:value="false"
-            />
-
+            android:value="false" />
     </application>
-
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-
 
 </manifest>
