--- a/Blueberry/app/build.gradle
+++ b/Blueberry/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
+    implementation 'com.google.firebase:firebase-ml-vision:18.0.1'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
