--- a/Blueberry/app/src/main/AndroidManifest.xml
+++ b/Blueberry/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".menu.MainActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/title_activity_option"
             android:screenOrientation="portrait" />
