https://firebase.google.com/docs/ml-kit/android/recognize-text?hl=ko 기기별 API를 사용하는 경우 Play 스토어에서 앱 설치 후 기기에 머신러닝 모델을 자동으로 다운로드하도록 앱을 설정합니다.

--- a/Blueberry/app/src/main/AndroidManifest.xml
+++ b/Blueberry/app/src/main/AndroidManifest.xml
@@ -47,6 +47,9 @@
         <meta-data
             android:name="firebase_analytics_collection_deactivated"
             android:value="false" />
+        <meta-data
+            android:name="com.google.firebase.ml.vision.DEPENDENCIES"
+            android:value="ocr" />
     </application>
 
 </manifest>
